# crewai_training_step_by_step

./: .gitignore  README.md  pyproject.toml  report.md
.cursor/rules/: crewai-flows-guidelines.mdc  crewai-rules.mdc  crewai-tool.mdc  event-bus-guidelines.mdc  opik.mdc  ruff-python-linting.mdc  uv-manager-guidelines.mdc
knowledge/: user_preference.txt
src/crewai_trainig_step_by_step/: crew.py  main.py
src/crewai_trainig_step_by_step/config/: tasks.yaml
src/crewai_trainig_step_by_step/tools/: custom_tool.py  serper_scraper_tool.py
