[project]
name = "crewai_trainig_step_by_step"
version = "0.1.0"
description = "crewai_trainig_step_by_step using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
crewai_trainig_step_by_step = "crewai_trainig_step_by_step.main:run"
run_crew = "crewai_trainig_step_by_step.main:run"
train = "crewai_trainig_step_by_step.main:train"
replay = "crewai_trainig_step_by_step.main:replay"
test = "crewai_trainig_step_by_step.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
